[package]
name = "kanto"
version = "0.1.0"
edition = "2021"



[dependencies]
affinity = "0.1.2"
anyhow = "1.0.93"
serde = { version = "1.0.215", features = ["derive"] }
thread-priority = "1.2.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
axum = "0.7.9"
serde_json = "1.0.133"
